shared/src/test/data/yeast/invalid-json/unquoted-key.jyt
BeginDocument       0,  1,  0 ''
BeginNode           0,  1,  0 ''
BeginMapping        0,  1,  0 ''
Indicator           0,  1,  0 '{'
LineBreak           1,  1,  1 '\n'
WhiteSpace          2,  2,  0 '  '
BeginPair           4,  2,  2 ''
BeginNode           4,  2,  2 ''
BeginScalar         4,  2,  2 ''
Indicator           4,  2,  2 '\"'
Text                5,  2,  3 'ccc'
Indicator           8,  2,  6 '\"'
EndScalar           9,  2,  7 ''
EndNode             9,  2,  7 ''
Indicator           9,  2,  7 ':'
WhiteSpace         10,  2,  8 ' '
BeginNode          11,  2,  9 ''
BeginScalar        11,  2,  9 ''
Text               11,  2,  9 '1'
EndScalar          12,  2, 10 ''
EndNode            12,  2, 10 ''
EndPair            12,  2, 10 ''
Indicator          12,  2, 10 ','
LineBreak          13,  2, 11 '\n'
WhiteSpace         14,  3,  0 '  '
BeginPair          16,  3,  2 ''
BeginNode          16,  3,  2 ''
BeginScalar        16,  3,  2 ''
Error              16,  3,  2 'abb'
Text               16,  3,  2 'abb'
EndScalar          19,  3,  5 ''
EndNode            19,  3,  5 ''
Indicator          19,  3,  5 ':'
WhiteSpace         20,  3,  6 ' '
BeginNode          21,  3,  7 ''
BeginScalar        21,  3,  7 ''
Indicator          21,  3,  7 '\"'
Text               22,  3,  8 'aa'
Indicator          24,  3, 10 '\"'
EndScalar          25,  3, 11 ''
EndNode            25,  3, 11 ''
EndPair            25,  3, 11 ''
Indicator          25,  3, 11 ','
LineBreak          26,  3, 12 '\n'
WhiteSpace         27,  4,  0 '  '
BeginPair          29,  4,  2 ''
BeginNode          29,  4,  2 ''
BeginScalar        29,  4,  2 ''
Indicator          29,  4,  2 '\"'
Text               30,  4,  3 'recover'
Indicator          37,  4, 10 '\"'
EndScalar          38,  4, 11 ''
EndNode            38,  4, 11 ''
Indicator          38,  4, 11 ':'
WhiteSpace         39,  4, 12 ' '
BeginNode          40,  4, 13 ''
BeginScalar        40,  4, 13 ''
Indicator          40,  4, 13 '\"'
Text               41,  4, 14 're'
Indicator          43,  4, 16 '\"'
EndScalar          44,  4, 17 ''
EndNode            44,  4, 17 ''
EndPair            44,  4, 17 ''
LineBreak          44,  4, 17 '\n'
Indicator          45,  5,  0 '}'
EndMapping         46,  5,  1 ''
EndNode            46,  5,  1 ''
EndDocument        46,  5,  1 ''
